--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
                             <a class="nav-link dropdown-toggle" href="#" role="button"
                                data-bs-toggle="dropdown">Create</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/addTask">Task</a></li>
+                                <li><a class="dropdown-item" href="/tasks">Task</a></li>
                                 <li><a class="dropdown-item" href="/projects">Project</a></li>
                             </ul>
                         </li>
@@ -48,9 +48,9 @@
                                 Administration
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/users">User</a></li>
+                                <li><a class="dropdown-item" id="users" href="/users">User</a></li>
                                 <li><a class="dropdown-item" href="#">Settings</a></li>
-                                <li><a class="dropdown-item" href="#">Profile</a></li>
+                                <li><a class="dropdown-item" href="/profile">Profile</a></li>
                             </ul>
                         </li>
                         <li>
