get tasks only active for current user

--- a/app/templates/show_tasks.html
+++ b/app/templates/show_tasks.html
@@ -60,7 +60,7 @@
 
     {% else %}
     <div class="title_section">
-        There are no any {{args['name_op_page']}}
+        You have no active tasks
     </div>
     {% endif %}
 
